[package]
name = "eroc_microstd"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "An alternative implementation of std library for no_std environment."
repository = "https://github.com/radifun/eroc_microstd"
readme = "README.md"

publish = false

[build-dependencies]
regex = "1.7.1"
